--- a/index.html
+++ b/index.html
@@ -129,7 +129,21 @@
                         style="background-color: darkgreen; height: 30px; width: 30px;">
                     </div>
                 </searchbar>
-                <div id="search-div-main" class="d-flex"></div>
+                <div class="container-fluid" id="search-div-main" style="display: none;">
+                    <div class="row">
+                        <div class="col-9">
+                            <div class="fs-4 qaText pt-5 ms-5">Similar Accounts</div>
+                            <div id="search-div" class="d-flex flex-column flex-wrap search-results ms-5"></div>
+                        </div>
+                        <div class="col-3 pt-5">
+                            <div class=" pb-4 fs-4 me-5 qaText">Quick Actions</div>
+                            <div class="pb-4 text">Track new account</div>
+                            <div class="pb-4 text">Bulk track accounts</div>
+                            <div class="pb-4 text">Manage accounts</div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="disable-div">
                     <div class="d-flex align-item-center p-5" style="background-color: #f7f7f7; ">
                         <div class="d-flex flex-column justify-content-center p-5 me-5">
@@ -152,11 +166,11 @@
                             globally
                         </div>
                         <div class="d-flex align-item-center justify-content-center gap-4">
-                            <div><img src="/Icons/salesloft.png" alt=""></div>
-                            <div><img src="/Icons/zetwerk.png" alt=""></div>
-                            <div><img src="/Icons/audiotoria.png" alt=""></div>
-                            <div><img src="/Icons/entropik.png" alt=""></div>
-                            <div><img src="/Icons/capillary.png" alt=""></div>
+                            <div><img src="/Icons/salesloft.png" alt="salesloft logo"></div>
+                            <div><img src="/Icons/zetwerk.png" alt="zetwerk logo"></div>
+                            <div><img src="/Icons/audiotoria.png" alt="audiotoria logo"></div>
+                            <div><img src="/Icons/entropik.png" alt="entropik logo"></div>
+                            <div><img src="/Icons/capillary.png" alt="capillary logo"></div>
                         </div>
                     </div>
                     <!-- main outer container div -->
@@ -183,10 +197,10 @@
                                         </div>
                                         <div class="font-size-smaller pb-1">Augie Hoffmann, SDR Manager</div>
                                         <div>
-                                            <img src="/Icons/fourkites.png" alt="">
+                                            <img src="/Icons/fourkites.png" alt="fourkites logo">
                                         </div>
                                     </div>
-                                    <img src="/Icons/augie hoffman.png" alt="">
+                                    <img src="/Icons/augie hoffman.png" alt="augie hoffman image">
                                 </div>
                             </div>
                             <!-- 2nd card div-->
@@ -197,18 +211,15 @@
                                     <div class="d-flex flex-column pt-2 ps-1">
                                         <div class="font-size-small lh-sm pb-2">Salesloft got 12% higherresponse with
                                             personalization using B2Brain intel
-
                                         </div>
                                         <div class="font-size-smaller pb-1">William sturgies, SDR Manager</div>
                                         <div>
-                                            <img src="/Icons/salesloft1.png" alt="">
+                                            <img src="/Icons/salesloft1.png" alt="salesloft logo">
                                         </div>
                                     </div>
-                                    <img src="/Icons/William sturgies.png" alt="">
+                                    <img src="/Icons/William sturgies.png" alt="William sturgies image">
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
