--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </li>
       </ul>
     </sidebar>
-    <main class="container-fluid p-0 m-0 main">
+    <main class="container-fluid p-0 m-0 main" id="main">
       <searchbar class="d-flex justify-content-between shadow-search-container  ">
         <div class="pt-3 pb-3 text-color">
           <i class="bi bi-search ms-4 icon-color" id="searchIcon"></i>
@@ -125,11 +125,11 @@
       </searchbar>
       <div class="container-fluid search-results-container" id="search-div-main">
         <div class="row m-0 p-0">
-          <div class="col-lg-8 p-0" id="saContainer">
+          <div class="col-xl-8 col-lg-7 col-sm-7 col-7 p-0" id="saContainer">
             <div class="fs-4 qaText pt-5 ms-5 ms-1">Similar Accounts</div>
             <div id="search-div" class="d-flex flex-column flex-xl-wrap search-results ms-5 ms-1"></div>
           </div>
-          <div class="ps-5 col-lg-3 col-4 pt-5">
+          <div class="ps-5 col-xl-3 col-lg-5 col-sm-5 col-5 pt-5">
             <div class="pb-4 fs-4  qaText">Quick Actions</div>
             <div class="pb-4 text">Track new account</div>
             <div class="pb-4 text">Bulk track accounts</div>
